micro: html linter

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,7 @@
   <meta property="og:image:height" content="300" />
   <meta property="og:url" content="https://www.hackdotslash.co.in">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="google" content="notranslate">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
@@ -146,8 +147,7 @@
                     width="20%">&nbsp;<span style="color: #bd0c0e">DOT</span><span
                     style="color: black">SLASH</span><span style="color: black; margin-top: 1rem;"> 4.0</span></h1>
                 <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white;">Root to Ideas</h4>
-                <h5 class="lead" style="font-size: 30px;color: black;">
-                  <button class="" id="devfolio-apply-now1" onclick="register()">Register </button>
+                  <button class="lead" id="devfolio-apply-now1" onclick="register()">Register </button>
                   <h3 class="lead" id="hackathon__dates">
                     30-31st January, 2021</h3>
                   <h3 class="lead"><span style="font-size:20px">Powered by</span> <span
@@ -1095,12 +1095,12 @@
             <div class="col-md-8">
               <div class="contact-social">
 
-                <a href="https://www.facebook.com/hackatdotslash/" target="_blank"><i
+                <a href="https://www.facebook.com/hackatdotslash/" rel="noopener noreferrer" target="_blank"><i
                     class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com/hackatdotslash" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/hackatdotslash" rel="noopener noreferrer" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i
                     class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/hackatdotslash/" target="_blank">
+                <a href="https://www.linkedin.com/company/hackatdotslash/" rel="noopener noreferrer" target="_blank">
                   <i class="fa fa-linkedin"></i>
                 </a>
                 <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
