css preloading removed -firefox compatibility issue found

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -40,29 +40,29 @@
   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
   <!-- Owl Carousel -->
-  {{!-- <link rel="preload" href="css/owl.carousel.css" as="style"/> --}}
-  {{!-- <link rel="preload" href="css/owl.theme.default.css" as="style"/> --}}
-  <link rel="preload" href="css/owl.carousel.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="stylesheet" href="css/owl.carousel.css" >
+  <link rel="stylesheet" href="css/owl.theme.default.css" >
+  {{!-- <link rel="preload" href="css/owl.carousel.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="css/owl.carousel.css"></noscript>
   <link rel="preload" href="css/owl.theme.default.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="css/owl.theme.default.css"></noscript>
-  
+   --}}
   <!-- Font Awesome Icon -->
-  {{!-- <link rel="stylesheet" href="css/font-awesome.min.css"> --}}
-  {{!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> --}}
-  <link rel="preload" href="css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  {{!-- <link rel="preload" href="css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="css/font-awesome.min.css"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
-  
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript> --}}
 
   <!-- Custom stlylesheet  (required to load initially)-->
   <link rel="stylesheet" href="css/style.css" />
 
-  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"></noscript>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" >
   
-  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" > --}}
+  {{!-- <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"></noscript> --}}
+  
   <style>
     .rotate {
       -webkit-transform: rotate(90deg);
