--- a/views/home.hbs
+++ b/views/home.hbs
@@ -654,6 +654,9 @@
               <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer" >
                 <img src="img/github-logo.jpg" alt="">
               </a>
+              <a href="https://www.digitalocean.com/" target="_blank" class="sponsor" rel="noopener noreferrer" >
+                <img src="img/digitalocean.png" alt="">
+              </a>
               <a href="https://www.wolfram.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/wolfram.jpg" alt="">
               </a>
@@ -665,6 +668,9 @@
               </a>
               <a href="https://www.clerky.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/clerky-logo.svg" alt="" style="width: 15rem;">
+              </a>
+              <a href="https://givemycertificate.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/give_me_certificate.jpeg" alt="">
               </a>
               <a href="https://www.careernaksha.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/CareerNaksha.jpeg" alt="">
