prizes nav link added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -140,7 +140,7 @@
             {{!-- <li><a href="#schedule">Schedule</a></li> --}}
             <li><a href="#sponsors">Sponsors</a></li>
             <li><a href="#faq">FAQs</a></li>
-            {{!-- <li><a href="#prizes">Prizes</a></li> --}}
+            <li><a href="#prizes">Prizes</a></li>
             <li><a href="/coc">Code of conduct</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
