--- a/public/sass/_mobile.scss
+++ b/public/sass/_mobile.scss
@@ -77,6 +77,16 @@
             }
         }
     }
+    #footer{
+        .wave_box span{
+            font-size: 24px;
+        }
+        .contact-social a{
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+        }
+    }
 }
 
 @media (max-width: 280px){
