--- a/views/home.hbs
+++ b/views/home.hbs
@@ -802,48 +802,76 @@
 
       </div>
       <!-- /Contact -->
-
-      <!-- Footer -->
+    </div>
+    <!-- Footer -->
       <footer id="footer">
-        <!-- container -->
-        <div class="container">
-          <!-- row -->
-          <div class="row">
-
-            <!-- footer logo -->
-            <div class="col-md-4">
-              <div class="footer-brand">
-                <a class="logo" href="/">
-                  <img class="logo-img" src="./img/image.png" alt="logo">
-                </a>
+          <!-- container -->
+          <div class="wave_box container">
+              <!-- row -->
+              <div class="row">
+                  <!-- footer logo -->
+                  <div class="col-md-4">
+                      <div class="footer-brand">
+                          <a class="logo" href="/">
+                              <img
+                                  class="logo-img"
+                                  src="./img/logo_only1.png"
+                                  alt="logo"
+                              />
+                          </a>
+                          <span>Dot</span><span>Slash</span
+                            ><span> 4.0</span>
+                      </div>
+                  </div>
+                  <!-- /footer logo -->
+                  
+                  <!-- contact social -->
+                  <div class="col-md-8">
+                      <div class="contact-social">
+                          <a
+                              href="https://www.facebook.com/hackatdotslash/"
+                              rel="noopener noreferrer"
+                              target="_blank"
+                              ><i class="fa fa-facebook"></i
+                          ></a>
+                          <a
+                              href="https://twitter.com/hackatdotslash"
+                              rel="noopener noreferrer"
+                              target="_blank"
+                              ><i class="fa fa-twitter"></i
+                          ></a>
+                          <a
+                              href="https://www.instagram.com/hackatdotslash/"
+                              target="_blank"
+                              ><i class="fa fa-instagram"></i
+                          ></a>
+                          <a
+                              href="https://www.linkedin.com/company/hackatdotslash/"
+                              rel="noopener noreferrer"
+                              target="_blank"
+                          >
+                              <i class="fa fa-linkedin"></i>
+                          </a>
+                          <a
+                              href="mailto:hackatdotslash@gmail.com"
+                              target="_blank"
+                              ><i class="fa fa-envelope"></i
+                          ></a>
+                      </div>
+                  </div>
+                  <!-- /contact social -->
+                  <div class="coc">
+                      <a href="/coc">Code of Conduct</a>
+                    </div>
+                    <div class="copyright">
+                      ©2021 DOTSLASH
+                  </div>
               </div>
-            </div>
-            <!-- /footer logo -->
-
-            <!-- contact social -->
-            <div class="col-md-8">
-              <div class="contact-social">
-
-                <a href="https://www.facebook.com/hackatdotslash/" rel="noopener noreferrer" target="_blank"><i
-                    class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com/hackatdotslash" rel="noopener noreferrer" target="_blank"><i
-                    class="fa fa-twitter"></i></a>
-                <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/hackatdotslash/" rel="noopener noreferrer" target="_blank">
-                  <i class="fa fa-linkedin"></i>
-                </a>
-                <a href="mailto:hackatdotslash@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
-              </div>
-            </div>
-            <!-- /contact social -->
-
+              <!-- /row -->
           </div>
-          <!-- /row -->
-        </div>
-        <!-- /container -->
+          <!-- /container -->
       </footer>
       <!-- /Footer -->
-    </div>
   </div>
   <!-- jQuery Plugins -->
   <script src="js/jquery.min.js"></script>
