--- a/views/form.hbs
+++ b/views/form.hbs
@@ -5,8 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Team registration</title>
+
   <link rel="shortcut icon" type="image/png" href="/img/logo_only1.png" />
-  <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
   <link type="text/css" rel="stylesheet" href="css/owl.carousel.css" />
   <link type="text/css" rel="stylesheet" href="css/owl.theme.default.css" />
 
@@ -14,15 +14,17 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
 
   <!-- Custom stlylesheet -->
-  <link type="text/css" rel="stylesheet" href="css/style.css" />
 
   <!-- CSS  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@7.28.4/dist/sweetalert2.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+
+  <link type="text/css" rel="stylesheet" href="css/style.css" />
 </head>
 <style>
   input[type=number]::-webkit-inner-spin-button,
@@ -40,40 +42,15 @@
 
 <body>
   <!-- Header -->
-  <header id="header" class="transparent-navbar">
-    <!-- container -->
-    <div class="container">
-      <!-- navbar header -->
-      <div class="navbar-header">
-        <!-- Logo -->
-        <div class="navbar-brand">
-          <a class="logo" href="/">
-            <img class="logo-img" src="./img/image.png" alt="logo">
-            <img class="logo-alt-img" src="./img/image.png" alt="logo">
-          </a>
-        </div>
-        <!-- /Logo -->
-      </div>
-      <!-- /navbar header -->
-      <!-- Navigation -->
-      <nav id="nav">
-        <ul class="main-nav nav navbar-nav navbar-right">
-          <li>
-            <h3>Team Registration</h3>
-          </li>
-        </ul>
-      </nav>
-      <!-- /Navigation -->
-    </div>
-    <!-- /container -->
-  </header>
-  <!-- /Header -->
-  <center>
+  <div class="container">
+    <header style="margin-top: 2rem;">
+      <h1>Team Registration ✌</h1>
+    </header>
     <div class="row">
       <form class="col s12" id="form" action="">
         <div style="background-color: white">
           <div style="width:80%">
-            <div class="row" style="margin-top: 100px">
+            <div class="row" style="margin-top: 40px">
               <div class="input-field col s12">
                 <i class="material-icons prefix"><i class="fa fa-users" aria-hidden="true"></i></i>
                 <input id="team_name" type="text" class="validate" name="team_name" required>
@@ -96,7 +73,7 @@
             </div> --}}
           </div>
         </div>
-        <div style="background-color: whitesmoke;padding-top: 10px">
+        <div>
           <div style="width:80%">
             <h3>Member 1</h3>
             <div class="row">
@@ -109,7 +86,7 @@
             <div class="row">
               <div class="input-field col s6 res">
                 <i class="material-icons prefix">calendar_today</i>
-                <input id="dob1" type="date" class="datepicker" name="dob1" required>
+                <input id="dob1" type="text" class="datepicker" name="dob1" autocomplete="off" required>
                 <label for="dob1">Date of birth*</label>
               </div>
               <div class="input-field col s6 res" style="padding-left: 10px">
@@ -160,7 +137,7 @@
               <div class="input-field col s6 res">
                 <i class="material-icons prefix"><i class="fa fa-address-card" aria-hidden="true"></i></i>
                 <input id="resume_url1" type="url" class="validate" name="resume_url" required>
-                <label for="resume_url1" class="resume">A Google Drive link of your resume or a Portfolio Website
+                <label for="resume_url1" class="resume">Google Drive link of resume or a Portfolio Website
                   *</label>
               </div>
               <div class="input-field col s6 res" style="padding-left: 10px">
@@ -175,8 +152,12 @@
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="nextMem" type="checkbox" name="checkFor2">
-                <label for="nextMem" class="add-member">Add 2nd Member</label>
+                <label>
+                  <input id="nextMem" type="checkbox" name="checkFor2">
+                  <span class="add-member">Add 2nd Member</span>
+                </label>
+                <br>
+                <br>
               </div>
             </div>
 
@@ -195,7 +176,7 @@
             <div class="row">
               <div class="input-field col s6 res">
                 <i class="material-icons prefix">calendar_today</i>
-                <input id="dob2" type="date" class="datepicker" name="dob2">
+                <input id="dob2" type="text" class="datepicker" name="dob2" autocomplete="off">
                 <label for="dob2">Date of birth</label>
               </div>
               <div class="input-field col s6 res" style="padding-left: 10px">
@@ -247,7 +228,7 @@
               <div class="input-field col s6 res">
                 <i class="material-icons prefix"><i class="fa fa-address-card" aria-hidden="true"></i></i>
                 <input id="resume_url2" type="url" class="validate" name="resume_url">
-                <label for="resume_url2" class="resume">A Google Drive link of your resume or a Portfolio
+                <label for="resume_url2" class="resume">Google Drive link of resume or a Portfolio
                   Website</label>
               </div>
               <div class="input-field col s6 res">
@@ -262,14 +243,18 @@
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="nextMem2" type="checkbox" name="checkFor3">
-                <label for="nextMem2" class="add-member">Add 3rd Member</label>
+                <label>
+                  <input id="nextMem2" type="checkbox" name="checkFor3">
+                  <span class="add-member">Add 3rd Member</label>
+                </label>
+                <br>
+                <br>
               </div>
             </div>
           </div>
         </div>
 
-        <div style="background-color: whitesmoke;padding-top: 10px" class="hidden member3">
+        <div style="padding-top: 10px" class="hidden member3">
           <div style="width:80%">
             <h3>Member 3</h3>
             <div class="row">
@@ -282,7 +267,7 @@
             <div class="row">
               <div class="input-field col s6 res">
                 <i class="material-icons prefix">calendar_today</i>
-                <input id="dob3" type="date" class="datepicker" name="dob3">
+                <input id="dob3" type="text" class="datepicker" name="dob3" autocomplete="off">
                 <label for="dob3">Date of birth</label>
               </div>
               <div class="input-field col s6 res" style="padding-left: 10px">
@@ -334,7 +319,7 @@
               <div class="input-field col s6 res">
                 <i class="material-icons prefix"><i class="fa fa-address-card" aria-hidden="true"></i></i>
                 <input id="resume_url3" type="url" class="validate" name="resume_url">
-                <label for="resume_url3" class="resume">A Google Drive link of your resume or a Portfolio
+                <label for="resume_url3" class="resume">Google Drive link of resume or a Portfolio
                   Website</label>
               </div>
               <div class="input-field col s6 res" style="padding-left: 10px">
@@ -363,29 +348,33 @@
               <div class="input-field col s6 res" style="margin-top: 0">
                 <label>Which Track would you like to Hack?</label><br><br>
                 <p>
-                  <input name="new1" class="with-gap" type="radio" id="track1" checked />
-                  <label for="track1">Software</label>
+                  <label for="track1">
+                    <input name="new1" class="with-gap" type="radio" id="track1" checked />
+                    <span>Software</label>
+                  </label>
                 </p>
                 <p>
-                  <input name="new1" class="with-gap" type="radio" id="track2" />
-                  <label for="track2">Hardware</label>
+                  <label for="track2">
+                    <input name="new1" class="with-gap" type="radio" id="track2" />
+                    <span>Hardware</label>
+                  </label>
                 </p>
-                {{!-- <p>
-                  <input name="new1" class="with-gap" type="radio" id="track3" />
-                  <label for="track3">Ethereum</label>
-                </p> --}}
               </div>
             </div>
             <div class="row">
               <div class="input-field col s6 res" style="margin-top: 0">
                 <label>New to Hackathons?</label><br><br>
                 <p>
-                  <input name="new" class="with-gap" type="radio" id="test1" checked />
-                  <label for="test1">Yes</label>
+                  <label for="test1">
+                    <input name="new" class="with-gap" type="radio" id="test1" checked />
+                    <span>Yes</label>
+                  </label>
                 </p>
                 <p>
-                  <input name="new" class="with-gap" type="radio" id="test2" />
-                  <label for="test2">No</label>
+                  <label for="test2">
+                    <input name="new" class="with-gap" type="radio" id="test2" />
+                    <span>No</label>
+                  </label>
                 </p>
               </div>
             </div>
@@ -411,7 +400,7 @@
               </div>
             </div> --}}
             <div class="row">
-              <div class="input-field col s12 res" style="margin-top: 50px;">
+              <div class="input-field col s12 res">
                 <select id="textarea2" name="textarea2">
                   <option value="socialMed" selected>Social Media sites like facebook, twitter etc.</option>
                   <option value="friend">A friend or a Relative</option>
@@ -424,23 +413,24 @@
             </div>
           </div>
         </div>
-        <button id="instructions" class="btn waves-effect waves-light" type="button">Instructions</button>
+        <button id="instructions" class="btn waves-effect waves-light" type="button"
+          style="margin-right: 1rem;">Instructions</button>
         <button id="f" class="btn waves-effect waves-light" type="submit" name="action">Submit
           <i class="material-icons right">send</i>
         </button>
       </form>
     </div>
+  </div>
 
-  </center>
-  <script src="js/jquery.min.js"></script>
+  <script src="http://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.28.4/dist/sweetalert2.all.min.js"></script>
-  <script src="js/form.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/form.js"></script>
 </body>
 
 </html>
