cta section updated

--- a/public/sass/_mobile.scss
+++ b/public/sass/_mobile.scss
@@ -87,6 +87,9 @@
             line-height: 30px;
         }
     }
+    .section-bg{
+        border-radius: 0;
+    }
 }
 
 @media (max-width: 280px){
