--- a/public/sass/herostyles.scss
+++ b/public/sass/herostyles.scss
@@ -138,6 +138,8 @@ $primary-text: #ddd;
 
 @import 'chatbot';
 @import 'footer';
+@import 'custom-card';
+@import 'prizes';
 
 // mobile must be in end;
 @import 'mobile';
