become sponsor part ui improved

--- a/public/sass/_mobile.scss
+++ b/public/sass/_mobile.scss
@@ -93,6 +93,11 @@
     #galery-owl.owl-theme .owl-nav{
         display: none;
     }
+    #become-sponsor{
+        .dotted-line{
+            display: none;
+        }
+    }
 }
 
 @media (max-width: 280px){
