--- a/views/home.hbs
+++ b/views/home.hbs
@@ -421,7 +421,7 @@
           <div class="row">
             <div class="row">
               <div class="section-title">
-                <h3 class="title"><span>Prizes worth more than Rs 33 Lakhs</span></h3>
+                <h3 class="title"><span style="color: #0b0f28; text-transform: uppercase;">Prizes worth more than Rs 33 Lakhs</span></h3>
               </div>
             </div>
 
@@ -534,6 +534,7 @@
       </div>
       <!-- become-sponsor -->
       <div id="become-sponsor" class="section">
+        <img class="dotted-line" src="img/background_dotted_line.svg" alt="line">
         <div class="section-title">
           <div class="container">
             <div class="row">
