--- a/views/home.hbs
+++ b/views/home.hbs
@@ -427,7 +427,7 @@
 
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content text-center" style="background: linear-gradient(to top left, #3a6186, #89253e);">
-                <h2>First Prize</h2>
+                <h2>1st Prize</h2>
                 {{!-- <h1>&#x20B9; 10,000</h1> --}}
                 <p>
                   To be announced...
@@ -441,7 +441,7 @@
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content text-center" style="background: linear-gradient(to top left, #ffa17f, #00223e);">
-                <h2>Second Prize</h2>
+                <h2>2nd Prize</h2>
                 <p>
                   To be announced...
                 <p>
@@ -454,7 +454,7 @@
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content text-center" style="background: linear-gradient(to top left, #1CB5E0, #ffaf40)">
-                <h2>Third Prize</h2>
+                <h2>3rd Prize</h2>
                 <p>
                   To be announced...
                 <p>
